--- a/ui/index.html
+++ b/ui/index.html
@@ -3,50 +3,40 @@
 
 <head>
     <title>Veza PoC</title>
-    <style>
-        th {
-            text-align: left;
-        }
-
-        th,
-        td {
-            padding: 0.6em 1em 0.6em 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>Veza PoC</h1>
-    <table>
-        <tr>
-            <th>cpu_percent</th>
-            <td id="cpu_percent"></td>
-        </tr>
-        <tr>
-            <th>cpu_freq_current</th>
-            <td id="cpu_freq_current"></td>
-        </tr>
-        <tr>
-            <th>disk_io_read_bytes</th>
-            <td id="disk_io_read_bytes"></td>
-        </tr>
-        <tr>
-            <th>disk_io_write_bytes</th>
-            <td id="disk_io_write_bytes"></td>
-        </tr>
-        <tr>
-            <th>net_io_bytes_sent</th>
-            <td id="net_io_bytes_sent"></td>
-        </tr>
-        <tr>
-            <th>net_io_bytes_recv</th>
-            <td id="net_io_bytes_recv"></td>
-        </tr>
-        <tr>
-            <th>datetime_now</th>
-            <td id="datetime_now"></td>
-        </tr>
-    </table>
+    <div class="grid">
+        <div class="grid__item" style="grid-column:1/2;grid-row:1/2;">
+            <h2>CPU</h2>
+            <p><span id="cpu_percent"></span>&nbsp;%</p>
+        </div>
+        <div class="grid__item" style="grid-column:2/3;grid-row:1/2;">
+            <h2>Current Freq.</h2>
+            <p><span id="cpu_freq_current"></span>&nbsp;MHz</p>
+        </div>
+        <div class="grid__item" style="grid-column:3/5;grid-row:1/2;">
+            <h2>Disk I/O read</h2>
+            <p><span id="disk_io_read_bytes"></span>&nbsp;B</p>
+        </div>
+        <div class="grid__item" style="grid-column:1/3;grid-row:2/4;">
+            <h2>Disk I/O write</h2>
+            <p><span id="disk_io_write_bytes"></span>&nbsp;B</p>
+        </div>
+        <div class="grid__item" style="grid-column:3/4;grid-row:2/3;">
+            <h2>Net I/O sent</h2>
+            <p><span id="net_io_bytes_sent"></span>&nbsp;B</p>
+        </div>
+        <div class="grid__item" style="grid-column:3/4;grid-row:3/4;">
+            <h2>Net I/O recv</h2>
+            <p><span id="net_io_bytes_recv"></span>&nbsp;B</p>
+        </div>
+        <div class="grid__item" style="grid-column:4/5;grid-row:2/4;">
+            <h2>Datetime</h2>
+            <p><span id="datetime_now"></span></p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
